--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,12 +2,19 @@ FROM node:20
 
 WORKDIR /usr/src/app
 
+# Copy the package.json and package-lock.json files first
 COPY package*.json ./
 RUN npm install
 
+# Copy the entire source directory to the container
 COPY . .
+
+# Explicitly copy the .env file to the working directory
+COPY .env ./
 
 RUN npm run build
 
-EXPOSE 3000
+# Expose the application port
+EXPOSE 5173
+
 CMD ["npm", "run", "serve"]
